# alejandro-ponce

./: package-lock.json  package.json
OneDrive/Escritorio/punto_mas/nuevo_prueba/: .pre-commit-config.yaml  CHANGELOG.md  Dockerfile  MANIFEST.in  Makefile  README.md  compose.override.yml  compose.yml  mkdocs.yml  package-lock.json  package.json  pyproject.toml  vite.config.js
OneDrive/Escritorio/punto_mas/nuevo_prueba/docs/: about.md  index.md  requirements.txt
OneDrive/Escritorio/punto_mas/nuevo_prueba/docs/css/: extra.css
OneDrive/Escritorio/punto_mas/nuevo_prueba/docs/dev/: dev-guide.md  extrernal-docs.md  git-guide.md  index.md  releases.md
OneDrive/Escritorio/punto_mas/nuevo_prueba/docs/gestion/: agile.md  ciclo-de-vida-issues.md  index.md  reportando-bugs.md
OneDrive/Escritorio/punto_mas/nuevo_prueba/docs/tech/: config-ref.md  contributing.md  index.md  install.md  issues.md
OneDrive/Escritorio/punto_mas/nuevo_prueba/docs/users/: index.md
OneDrive/Escritorio/punto_mas/nuevo_prueba/etc/: .env.skel
OneDrive/Escritorio/punto_mas/nuevo_prueba/etc/nginx/: nginx.conf
OneDrive/Escritorio/punto_mas/nuevo_prueba/scripts/: backup.sh  ci.upload.sh  deploy.sh  list_backups.sh  prepare.sh  restore.sh  update.sh  variables.sh
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/cristian-super/: README.md  package-lock.json  package.json
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/cristian-super/src/modules/shop/components/: CustomFooter.vue  TopMenu.vue
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/cristian-super/src/modules/shop/layouts/: ShopLayout.vue
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/cristian-super/src/modules/shop/views/: HomeView.vue
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/cristian-super/src/router/: index.ts
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/home/: admin.py
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/home/api/: views.py
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/home/migrations/: 0001_initial.py
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/home/models/: __init__.py  base.py  sample.py
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/punto_mas/: __init__.py  manage.py  router.py  settings.py  urls.py  wsgi.py
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/punto_mas/templates/: 404.html  500.html  about.html  base.html  footer.html  header.html  home.html  index.html  samples.html  sandbox.html
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/ui/: conf.js  store.js
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/ui/models/: base.js  index.js  sample.js
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/ui/pages/main/: index.js  page.vue
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/ui/sass/: _variables.scss  leaflet.css  main.scss
OneDrive/Escritorio/punto_mas/nuevo_prueba/src/ui/utils/: index.js
src/app/: layout.tsx  page.tsx
src/components/: AutoCard.tsx  CategoriaSection.tsx  ChatBot.tsx  FloatingButtons.tsx  Footer.tsx  Hero.tsx  HeroSwiper.tsx  Navbar.tsx
src/data/: autos.ts  modelos.ts
(+167 files in other folders)
